fixed stale SCXXFLAGS reference
Former-commit-id: ae536d74bb9a1357da6a031b7841b2158fe95c24

--- a/src/Makefile
+++ b/src/Makefile
@@ -112,8 +112,8 @@ ifeq (,$(findstring -g,$(CXXFLAGS)))
 endif
 
 server:	libenet $(SERVER_OBJS)
-	$(CXX) $(SCXXFLAGS) -o bfserver $(SERVER_OBJS) $(SERVER_LIBS)
-ifeq (,$(findstring -g,$(SCXXFLAGS)))
+	$(CXX) $(CXXFLAGS) -o bfserver $(SERVER_OBJS) $(SERVER_LIBS)
+ifeq (,$(findstring -g,$(CXXFLAGS)))
 	strip bfserver
 endif
 
