--- a/src/Makefile
+++ b/src/Makefile
@@ -7,7 +7,7 @@ INCLUDES= -Ishared -Iengine -Igame -Ienet/include
 
 ifneq (,$(findstring MINGW,$(PLATFORM)))
 CLIENT_INCLUDES= -DINTERFACE -DIRC $(INCLUDES) -Iinclude
-CLIENT_LIBS= -mwindows -Llib -lSDLmain -lSDL -lSDL_image -lSDL_mixer -lzdll -lopengl32 -lenet -lws2_32 -lwinmm
+CLIENT_LIBS= -mwindows -lmingw32 -Llib -lSDLmain -lSDL -lSDL_image -lSDL_mixer -lzdll -lopengl32 -lenet -lws2_32 -lwinmm
 else
 CLIENT_INCLUDES= -DINTERFACE -DIRC $(INCLUDES) -I/usr/X11R6/include `sdl-config --cflags`
 CLIENT_LIBS= -Lenet -lenet -L/usr/X11R6/lib `sdl-config --libs` -lSDL_image -lSDL_mixer -lz -lGL
@@ -118,10 +118,10 @@ $(SERVER_OBJS): CXXFLAGS += $(SERVER_INCLUDES)
 
 ifneq (,$(findstring MINGW,$(PLATFORM)))
 client: $(CLIENT_OBJS)
-    $(CXX) $(CXXFLAGS) -o ../bin/bfclient.exe $(CLIENT_OBJS) $(CLIENT_LIBS)
+	$(CXX) $(CXXFLAGS) -o ../bin/bfclient.exe $(CLIENT_OBJS) $(CLIENT_LIBS)
 
 server: $(SERVER_OBJS)
-    $(CXX) $(CXXFLAGS) -o ../bin/bfserver.exe $(SERVER_OBJS) $(SERVER_LIBS)
+	$(CXX) $(CXXFLAGS) -o ../bin/bfserver.exe $(SERVER_OBJS) $(SERVER_LIBS)
 
 install-client: client
 ifeq (,$(findstring -g,$(CXXFLAGS)))
