don't use -mwindows on standalone server
Former-commit-id: f4a9c550f05886a346a785f665163f138362c2c3

--- a/src/Makefile
+++ b/src/Makefile
@@ -72,7 +72,7 @@ CLIENT_PCH= shared/cube.h.gch
 
 ifneq (,$(findstring MINGW,$(PLATFORM)))
 SERVER_INCLUDES= -DSTANDALONE -DMASTERSERVER -DIRC $(INCLUDES) -Iinclude
-SERVER_LIBS= -mwindows -Llib -lzdll -lenet -lws2_32 -lwinmm
+SERVER_LIBS= -Llib -lzdll -lenet -lws2_32 -lwinmm
 else
 SERVER_INCLUDES= -DSTANDALONE -DMASTERSERVER -DIRC $(INCLUDES)
 SERVER_LIBS= -Lenet -lenet -lz
