S_V_DENIED announcement for when a flag is dropped close to the carrier's home base (currently only a duplicate of S_V_OWNED until a proper one is created), added announcedelay in case you want to clip consecutive announcements that play too soon and overlap
Former-commit-id: 71bdbb7d18e3daa4f341a54a04c9dc0366f8b9e0

--- a/data/sounds/announcer/alpha/package.cfg
+++ b/data/sounds/announcer/alpha/package.cfg
@@ -18,3 +18,4 @@ registersound	"announcer/alpha/youlose"			224	"air"			//	S_V_YOULOSE
 registersound	"announcer/alpha/missioncomplete"	224	"air"			//	S_V_MCOMPLETE
 registersound	"announcer/alpha/fragged"			224	"air"			//	S_V_FRAGGED
 registersound	"announcer/alpha/owned"				224	"air"			//	S_V_OWNED
+registersound	"announcer/alpha/owned"				224	"air"			//	S_V_DENIED
