--- a/data/sounds/announcer/beta/package.cfg
+++ b/data/sounds/announcer/beta/package.cfg
@@ -18,3 +18,4 @@ registersound	"announcer/beta/youlose"			224	"air"			//	S_V_YOULOSE
 registersound	"announcer/beta/missioncomplete"	224	"air"			//	S_V_MCOMPLETE
 registersound	"announcer/beta/fragged"			224	"air"			//	S_V_FRAGGED
 registersound	"announcer/beta/owned"				224	"air"			//	S_V_OWNED
+registersound	"announcer/beta/owned"				224	"air"			//	S_V_DENIED
