--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -167,7 +167,8 @@ editbind DELETE		[ getmap ]
 
 editbind LSHIFT		[ floatspeed 300; modscale = 10; onrelease [ floatspeed 75; modscale = 1; ] ]
 editbindmod LCTRL	passthrough
-editbindmod LALT	[hmapedit; blendpaintmode 0]
+editbind LALT		[ hmapedit; blendpaintmode 0 ]
+editbind TAB		[ showpastegrid 1; showcursorgrid 1; showselgrid 1; onrelease [ showpastegrid 0; showcursorgrid 0; showselgrid 0 ] ]
 
 bind MOUSE4			[ universaldelta 1 ]	// also used for editing, see below
 bind MOUSE5			[ universaldelta -1 ]
