gridbindstyle alias to control whether TAB does a toggle or onrelease event
Former-commit-id: 1b4fae0728decc58c47cbe043d60c1d52f7f4ece

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -168,7 +168,19 @@ editbind DELETE		[ getmap ]
 editbind LSHIFT		[ floatspeed 300; modscale = 10; onrelease [ floatspeed 75; modscale = 1; ] ]
 editbindmod LCTRL	passthrough
 editbind LALT		[ hmapedit; blendpaintmode 0 ]
-editbind TAB		[ showpastegrid 1; showcursorgrid 1; showselgrid 1; onrelease [ showpastegrid 0; showcursorgrid 0; showselgrid 0 ] ]
+gridbindstyle = 1
+gridbindswitch = 0
+editbind TAB		[
+	if (= $gridbindstyle 1) [
+		if (= $gridbindswitch 1) [
+			showpastegrid 0; showcursorgrid 0; showselgrid 0; gridbindswitch = 0
+		] [
+			showpastegrid 1; showcursorgrid 1; showselgrid 1; gridbindswitch = 1
+		]
+	] [
+		showpastegrid 1; showcursorgrid 1; showselgrid 1; onrelease [ showpastegrid 0; showcursorgrid 0; showselgrid 0 ]
+	]
+]
 
 bind MOUSE4			[ universaldelta 1 ]	// also used for editing, see below
 bind MOUSE5			[ universaldelta -1 ]
