irc command names altered for consistency, added; ircserv, ircport, ircnick, ircbind, ircpass, ircpasschan, ircrelaychan - nogibs, gibscale, gibexpire
Former-commit-id: 1816559e9371ca0332a2ff541ef2dc1d35496fa8

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -40,8 +40,8 @@ newgui irc [
 					guifield ircname@ircident -40
 					guistrut 1
 					guibutton "connect" [
-						addircclient $ircname@ircident $irchost@ircident $ircport@ircident $ircnick@ircident
-						addircchan $ircname@ircident $ircchan@ircident
+						ircaddclient $ircname@ircident $irchost@ircident $ircport@ircident $ircnick@ircident
+						ircaddchan $ircname@ircident $ircchan@ircident
 					]
 				]
 				guifield irchost@ircident -40
@@ -50,13 +50,13 @@ newgui irc [
 				guilist [
 					guifield ircchan@ircident -40
 					guistrut 1
-					guibutton "join" [ addircchan $ircname@ircident $ircchan@ircident ]
+					guibutton "join" [ ircaddchan $ircname@ircident $ircchan@ircident ]
 				]
 			]
 		]
 	]
 	guibar
-	guiirc
+	ircgui
 ] [
 	ircname0 = freenode
 	irchost0 = irc.freenode.net
@@ -80,10 +80,10 @@ newgui about [
 ]
 
 newgui support [
-	guiirc freenode
+	ircgui freenode
 ] [
-	addircclient freenode irc.freenode.net 6667 (getname)
-	addircchan freenode #bloodfrontier
+	ircaddclient freenode irc.freenode.net 6667 (getname)
+	ircaddchan freenode #bloodfrontier
 ]
 
 newgui help [
