added dds files for player models
Former-commit-id: 51647295abf2758150ba809dd791e2446bd32860

--- a/data/models/actors/player/vwep/md5.cfg
+++ b/data/models/actors/player/vwep/md5.cfg
@@ -2,8 +2,8 @@ md5load "../trooper_hands.md5mesh" firstplayer
 
 md5tag Weapon tag_weapon
 
-md5skin mesh "<compress:2>../skin.jpg" "<compress:2>../mask.jpg"
-md5bumpmap mesh "<compress:2>../normals.jpg"
+md5skin mesh "<dds>../skin.jpg" "<dds>../mask.jpg"
+md5bumpmap mesh "<dds>../normals.jpg"
 
 md5pitch "" 1
 
