--- a/data/models/actors/player/gamma/md5.cfg
+++ b/data/models/actors/player/gamma/md5.cfg
@@ -5,8 +5,8 @@ exec "data/models/actors/player/ragdoll.cfg"
 md5tag Weapon tag_weapon
 md5tag waist tag_flag
 
-md5skin mesh "<compress:2>skin.jpg" "<compress:2>../mmask.jpg"
-md5bumpmap mesh "<compress:2>../mnormal.png"
+md5skin mesh "<dds>skin.jpg" "<dds>../mmask.jpg"
+md5bumpmap mesh "<dds>../mnormal.png"
 
 md5anim "idle"                         "../idle.md5anim"           1
 md5anim "dying"                        "../dying.md5anim"          8
