added dds files for weapons
Former-commit-id: 718c2c2851c5c36e590a6e6adf06df87d960251e

--- a/data/models/weapons/chaingun/vwep/md5.cfg
+++ b/data/models/weapons/chaingun/vwep/md5.cfg
@@ -1,6 +1,6 @@
 md5load ../mesh.md5mesh
-md5skin smgmesh ../smgs.jpg ../smgm.jpg
-md5bumpmap smgmesh ../smgn.jpg
+md5skin smgmesh <dds>../smgs.jpg <dds>../smgm.jpg
+md5bumpmap smgmesh <dds>../smgn.jpg
 
 md5tag tag_muzzle tag_muzzle
 
