--- a/data/models/weapons/flamer/item/md5.cfg
+++ b/data/models/weapons/flamer/item/md5.cfg
@@ -1,6 +1,6 @@
 md5load ../mesh2.md5mesh
-md5skin flmesh ../skin.jpg ../mask.jpg
-md5bumpmap flmesh ../normal.jpg
+md5skin flmesh <dds>../skin.jpg <dds>../mask.jpg
+md5bumpmap flmesh <dds>../normal.jpg
 
 md5tag tag_muzzle tag_muzzle
 
