--- a/data/models/weapons/plasma/item/md5.cfg
+++ b/data/models/weapons/plasma/item/md5.cfg
@@ -1,6 +1,6 @@
 md5load ../mesh.md5mesh
-md5skin mesh ../skin.png ../mask.png
-md5bumpmap mesh ../normal.png
+md5skin mesh <dds>../skin.png <dds>../mask.png
+md5bumpmap mesh <dds>../normal.png
 
 md5tag tag_muzzle tag_muzzle
 
