--- a/data/models/weapons/rifle/vwep/md5.cfg
+++ b/data/models/weapons/rifle/vwep/md5.cfg
@@ -2,8 +2,8 @@ md5load ../mesh.md5mesh
 
 md5tag tag_muzzle tag_muzzle
 
-md5skin mesh ../skin.jpg ../mask.jpg
-md5bumpmap mesh ../normal.png
+md5skin mesh <dds>../skin.jpg <dds>../mask.jpg
+md5bumpmap mesh <dds>../normal.png
 
 //mdlambient 10
 mdlspec 200
