--- a/data/models/weapons/rockets/item/md3.cfg
+++ b/data/models/weapons/rockets/item/md3.cfg
@@ -1,6 +1,6 @@
 md3load rl.md3
 
-md3skin mesh ../rockskin.png ../rockmask.png
+md3skin mesh <dds>../rockskin.png <dds>../rockmask.png
 mdlambient 50
 mdlspec 200
 mdlscale 200
