--- a/data/models/weapons/rockets/md3.cfg
+++ b/data/models/weapons/rockets/md3.cfg
@@ -1,7 +1,7 @@
 md3load bfrock.md3
 
-md3skin mesh rockskin.png rockmask.png
-md3bumpmap mesh rockskin.png normal.jpg
+md3skin mesh <dds>rockskin.png <dds>rockmask.png
+md3bumpmap mesh <dds>normal.jpg
 
 
 
