--- a/data/models/weapons/rockets/vwep/md3.cfg
+++ b/data/models/weapons/rockets/vwep/md3.cfg
@@ -1,7 +1,7 @@
 md3load tris.md3
 
-md3skin mesh ../rockskin.png ../rockmask.png
-md3bumpmap mesh ../normal.jpg
+md3skin mesh <dds>../rockskin.png <dds>../rockmask.png
+md3bumpmap mesh <dds>../normal.jpg
 
 md3pitch 0
 mdltrans 0 1.5 0
