--- a/data/models/weapons/shotgun/item/md5.cfg
+++ b/data/models/weapons/shotgun/item/md5.cfg
@@ -2,8 +2,8 @@ md5load ../mesh.md5mesh
 
 md5tag tag_muzzle tag_muzzle
 
-md5skin sgmesh ../sgskin.png ../sgmask.png
-md5bumpmap sgmesh ../normal.jpg
+md5skin sgmesh <dds>../sgskin.png <dds>../sgmask.png
+md5bumpmap sgmesh <dds>../normal.jpg
 
 mdltrans -20 0 0
 mdlspec 100
