--- a/data/models/weapons/carbine/vwep/md5.cfg
+++ b/data/models/weapons/carbine/vwep/md5.cfg
@@ -2,8 +2,8 @@ md5load ../mesh.md5mesh
 
 md5tag tag_muzzle tag_muzzle
 
-md5skin cmesh ../skin.png ../mask.png
-md5bumpmap cmesh ../normals.png
+md5skin cmesh <dds>../skin.png <dds>../mask.png
+md5bumpmap cmesh <dds>../normals.png
 
 md5skin csite ../site.png ../sitemask.png
 md5alphatest csite 0
