--- a/data/models/weapons/grenades/vwep/md5.cfg
+++ b/data/models/weapons/grenades/vwep/md5.cfg
@@ -1,6 +1,6 @@
 md5load ../frag.md5mesh
-md5skin mesh ../skin.jpg ../mask.jpg
-md5bumpmap mesh ../normal.jpg
+md5skin mesh <dds>../skin.jpg <dds>../mask.jpg
+md5bumpmap mesh <dds>../normal.jpg
 
 mdlambient 0
 mdlspec 100
