added dds files for doors/console
Former-commit-id: 23a350b88e8790e33ee34fd2ca82e87abce6e836

--- a/data/models/acord/console1/md5.cfg
+++ b/data/models/acord/console1/md5.cfg
@@ -1,14 +1,14 @@
 md5load mesh.md5mesh
-md5skin mesh skin.jpg mask.jpg
-md5bumpmap mesh normal.jpg
-md5skin screen1 screen.png screenmask.jpg
-md5skin screen2 screen.png screenmask.jpg
-md5skin screen3 screen.png screenmask.jpg
-md5skin screen4 screen.png screenmask.jpg
-md5skin screen5 screen.png screenmask.jpg
-md5skin screen6 screen.png screenmask.jpg
-md5skin screen7 screen.png screenmask.jpg
-md5skin screen8 screen.png screenmask.jpg
+md5skin mesh <dds:4>skin.jpg <dds:4>mask.jpg
+md5bumpmap mesh <dds:4>normal.jpg
+md5skin screen1 <dds>screen.png <dds>screenmask.jpg
+md5skin screen2 <dds>screen.png <dds>screenmask.jpg
+md5skin screen3 <dds>screen.png <dds>screenmask.jpg
+md5skin screen4 <dds>screen.png <dds>screenmask.jpg
+md5skin screen5 <dds>screen.png <dds>screenmask.jpg
+md5skin screen6 <dds>screen.png <dds>screenmask.jpg
+md5skin screen7 <dds>screen.png <dds>screenmask.jpg
+md5skin screen8 <dds>screen.png <dds>screenmask.jpg
 
 mdlambient 0
 mdlspec 50
