--- a/data/models/acord/doors/door1/md5.cfg
+++ b/data/models/acord/doors/door1/md5.cfg
@@ -1,7 +1,7 @@
 md5load mesh.md5mesh
 
-md5skin mesh "gskin.png" "gmask.png"
-md5bumpmap mesh "gnormal.png"
+md5skin mesh "<dds>gskin.png" "<dds>gmask.png"
+md5bumpmap mesh "<dds>gnormal.png"
 
 md5anim "mapmodel"                     "idle.md5anim"           1	// only used when not a trigger
 md5anim "trigger on"                   "open.md5anim"           10	// ~1sec long, last anim is on position
