--- a/data/models/acord/doors/door4/md5.cfg
+++ b/data/models/acord/doors/door4/md5.cfg
@@ -1,7 +1,7 @@
 md5load mesh.md5mesh
 
-md5skin mesh "skin.png" "mask.png"
-md5bumpmap mesh "normal.png"
+md5skin mesh "<dds>skin.png" "<dds>mask.png"
+md5bumpmap mesh "<dds>normal.png"
 
 md5anim "mapmodel"                     "idle.md5anim"           1	// only used when not a trigger
 md5anim "trigger on"                   "open.md5anim"           10	// ~1sec long, last anim is on position
