added regenctfflag/regenstfflag for alternate health regeneration amount when inside own flag or in transit with enemy flag
Former-commit-id: 273aa014ee223220e1f90b61bce6c23521f8bafa

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -179,6 +179,12 @@ newgui game [
 			guistrut 2
 			guitext (format "%1%2" $yellow (gamename $modeselected $mutsselected)) "info"
 			guitext (format " %1selected on map %2%3" $gray $yellow $maptxt) "blank"
+			guistrut 1
+			guilist [
+				guibutton (format "%1add bot" $cyan) [addbot] "team"
+				guistrut 7
+				guibutton (format "%1delete bot" $magenta) [delbot] "player"
+			]
 		]
 		guistrut 1
 		guilist [
@@ -201,7 +207,7 @@ newgui game [
 			guistrut 1
 			guilist [
 				guibutton (format "%1vote" $green) (format "start %1 %2 %3" $maptxt $modeselected $mutsselected) "action"
-				guistrut 2
+				guistrut 1
 				guibutton (format "%1cancel" $red) [cleargui 1] "exit"
 			]
 		]
@@ -215,6 +221,8 @@ newgui game [
 					vardef maxhealth		"max health"
 					vardef maxcarry			"max carry weaps"
 					vardef regenhealth		"regen health"
+					vardef regenctfflag		"regen ctf flag"
+					vardef regenstfflag		"regen stf flag"
 					vardef itemsallowed		"items allowed"
 					vardef itemdropping		"item dropping"
 					vardef kamikaze			"kamikaze"
@@ -231,8 +239,6 @@ newgui game [
 					vardef jumpscale		"jump scale"
 					vardef speedscale		"speed scale"
 					vardef hitpushscale		"hit push scale"
-					vardef deadpushscale	"dead push scale"
-					vardef wavepushscale	"wave push scale"
 				]
 				guistrut 1
 				guilist [
@@ -240,6 +246,8 @@ newgui game [
 					varfld maxhealth 6
 					varfld maxcarry 6
 					varfld regenhealth 6
+					varfld regenctfflag 6
+					varfld regenctfflag 6
 					varfld itemsallowed 6
 					varfld itemdropping 6
 					varfld kamikaze 6
@@ -262,15 +270,15 @@ newgui game [
 					varfld jumpscale 6
 					varfld speedscale 6
 					varfld hitpushscale 6
-					varfld deadpushscale 6
-					varfld wavepushscale 6
 				]
 			]
 		]
-		guistrut 2
+		guistrut 1
 		guilist [
 			guilist [
 				guilist [
+					vardef deadpushscale	"dead push scale"
+					vardef wavepushscale	"wave push scale"
 					vardef scoringstyle		"scoring style"
 					vardef timelimit		"time limit"
 					vardef intermlimit		"intermission"
@@ -292,6 +300,8 @@ newgui game [
 				]
 				guistrut 1
 				guilist [
+					varfld deadpushscale 6
+					varfld wavepushscale 6
 					varfld scoringstyle 6
 					varfld timelimit 6
 					varfld intermlimit 6
@@ -311,12 +321,6 @@ newgui game [
 					varfld botminskill 6
 					varfld botmaxskill 6
 				]
-			]
-			guistrut 1
-			guilist [
-				guibutton (format "%1add bot" $green) [addbot] "team"
-				guistrut 7
-				guibutton (format "%1delete bot" $red) [delbot] "player"
 			]
 			guistrut 1
 			guilist [
