tweaked regen a bit more, added ability to "overcharge" health when defending own flag
Former-commit-id: 3ca270633819326dfb9caeb9a17cd1faf71c8916

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -176,14 +176,29 @@ newgui game [
 					guiimage (format "maps/%1" $maptxt) [echo (format "start %1 on %2" (gamename $modeselected $mutsselected) $maptxt) ] 6 1 "textures/nothumb"
 				]
 			]
-			guistrut 2
+			guistrut 1
 			guitext (format "%1%2" $yellow (gamename $modeselected $mutsselected)) "info"
 			guitext (format " %1selected on map %2%3" $gray $yellow $maptxt) "blank"
 			guistrut 1
 			guilist [
-				guibutton (format "%1add bot" $cyan) [addbot] "team"
-				guistrut 7
-				guibutton (format "%1delete bot" $magenta) [delbot] "player"
+				guilist [
+					vardef botscale			"scale num bots"
+					vardef botratio			"human to bot ratio"
+					vardef botminskill		"bot min skill level"
+					vardef botmaxskill		"bot max skill level"
+				]
+				guistrut 1
+				guilist [
+					varfld botscale 7
+					varfld botratio 7
+					varfld botminskill 7
+					varfld botmaxskill 7
+				]
+				guistrut 1
+				guilist [
+					guibutton (format "%1add bot" $cyan) [addbot] "team"
+					guibutton (format "%1del bot" $magenta) [delbot] "player"
+				]
 			]
 		]
 		guistrut 1
@@ -219,8 +234,12 @@ newgui game [
 				guilist [
 					vardef teamdamage		"team damage"
 					vardef maxhealth		"max health"
+					vardef overctfhealth	"over ctf health"
+					vardef overstfhealth	"over stf health"
 					vardef maxcarry			"max carry weaps"
 					vardef regenhealth		"regen health"
+					vardef regenctfguard	"regen ctf guard"
+					vardef regenstfguard	"regen stf guard"
 					vardef regenctfflag		"regen ctf flag"
 					vardef regenstfflag		"regen stf flag"
 					vardef itemsallowed		"items allowed"
@@ -234,27 +253,26 @@ newgui game [
 					vardef instaspawnweapon	"insta spawn weapon"
 					vardef maprotate		"map rotation"
 					vardef spawnrotate		"spawn rotation"
-					vardef damagescale		"damage scale"
-					vardef gravityscale		"gravity scale"
-					vardef jumpscale		"jump scale"
-					vardef speedscale		"speed scale"
-					vardef hitpushscale		"hit push scale"
 				]
 				guistrut 1
 				guilist [
-					varfld teamdamage 6
-					varfld maxhealth 6
-					varfld maxcarry 6
-					varfld regenhealth 6
-					varfld regenctfflag 6
-					varfld regenctfflag 6
-					varfld itemsallowed 6
-					varfld itemdropping 6
-					varfld kamikaze 6
-					varfld fraglimit 6
-					varfld ctflimit 6
-					varfld stflimit 6
-					varfld stffinish 6
+					varfld teamdamage 7
+					varfld maxhealth 7
+					varfld overctfhealth 7
+					varfld overstfhealth 7
+					varfld maxcarry 7
+					varfld regenhealth 7
+					varfld regenctfguard 7
+					varfld regenstfguard 7
+					varfld regenctfflag 7
+					varfld regenstfflag 7
+					varfld itemsallowed 7
+					varfld itemdropping 7
+					varfld kamikaze 7
+					varfld fraglimit 7
+					varfld ctflimit 7
+					varfld stflimit 7
+					varfld stffinish 7
 					guilist [
 						guilist [ varfld spawnweapon 2 ]
 						guitext (format "%1%2" $gray (at $wepnames $spawnweapon))
@@ -263,13 +281,8 @@ newgui game [
 						guilist [ varfld instaspawnweapon 2 ]
 						guitext (format "%1%2" $gray (at $wepnames $instaspawnweapon))
 					]
-					varfld maprotate 6
-					varfld spawnrotate 6
-					varfld damagescale 6
-					varfld gravityscale 6
-					varfld jumpscale 6
-					varfld speedscale 6
-					varfld hitpushscale 6
+					varfld maprotate 7
+					varfld spawnrotate 7
 				]
 			]
 		]
@@ -277,6 +290,11 @@ newgui game [
 		guilist [
 			guilist [
 				guilist [
+					vardef damagescale		"damage scale"
+					vardef gravityscale		"gravity scale"
+					vardef jumpscale		"jump scale"
+					vardef speedscale		"speed scale"
+					vardef hitpushscale		"hit push scale"
 					vardef deadpushscale	"dead push scale"
 					vardef wavepushscale	"wave push scale"
 					vardef scoringstyle		"scoring style"
@@ -292,41 +310,32 @@ newgui game [
 					vardef stfspawndelay	"stf spawn delay"
 					vardef instaspawnscale	"insta spawn scale"
 					vardef paintspawnscale	"paint spawn scale"
-					guistrut 1
-					vardef botscale			"scale num bots"
-					vardef botratio			"human to bot ratio"
-					vardef botminskill		"bot min skill level"
-					vardef botmaxskill		"bot max skill level"
 				]
 				guistrut 1
 				guilist [
-					varfld deadpushscale 6
-					varfld wavepushscale 6
-					varfld scoringstyle 6
-					varfld timelimit 6
-					varfld intermlimit 6
-					varfld votelimit 6
-					varfld itemspawntime 6
-					varfld regendelay 6
-					varfld regentime 6
-					varfld spawnprotecttime 6
-					varfld spawndelay 6
-					varfld ctfspawndelay 6
-					varfld stfspawndelay 6
-					varfld instaspawnscale 6
-					varfld paintspawnscale 6
-					guistrut 1
-					varfld botscale 6
-					varfld botratio 6
-					varfld botminskill 6
-					varfld botmaxskill 6
+					varfld damagescale 7
+					varfld gravityscale 7
+					varfld jumpscale 7
+					varfld speedscale 7
+					varfld hitpushscale 7
+					varfld deadpushscale 7
+					varfld wavepushscale 7
+					varfld scoringstyle 7
+					varfld timelimit 7
+					varfld intermlimit 7
+					varfld votelimit 7
+					varfld itemspawntime 7
+					varfld regendelay 7
+					varfld regentime 7
+					varfld spawnprotecttime 7
+					varfld spawndelay 7
+					varfld ctfspawndelay 7
+					varfld stfspawndelay 7
+					varfld instaspawnscale 7
+					varfld paintspawnscale 7
 				]
 			]
-			guistrut 1
-			guilist [
-				guistrut 2
-				guibutton (format "%1reset all game variables" $orange) [resetvars] "exit"
-			]
+			guibutton (format "%1reset all game variables" $orange) [resetvars] "exit"
 		]
 	] ]
 ] [
