finished vertigo map, fixed material slot config saving
Former-commit-id: 9e48d77d9c3ba33f10799763c2dbb431ca01428a

--- a/data/maps/vertigo.cfg
+++ b/data/maps/vertigo.cfg
@@ -9,16 +9,16 @@
 // lightcompress 3
 // lerpsubdivsize 4
 // sinkfric 2.0
-// cloudblend 0.2
+// cloudblend 0.5
 // cloudlayer []
 // airfric 75.0
 // mmskylight 1
-// spinsky 0.0
+// spinsky 0.175
 // cloudclip 0.0
 // cloudfade 0.2
 // skytexture 1
 // gravity 10.0
-// numteamplayers 6
+// numteamplayers 7
 // cloudscale 1.0
 // stepspeed 1.0
 // movespeed 60.0
@@ -36,15 +36,15 @@
 // crawlspeed 30.0
 // lerpangle 44
 // flarelights 0
-// impulsespeed 20.0
+// impulsespeed 25.0
 // spinclouds 0.0
 // causticscale 100
 // edgetolerance 4
-// skylight 2365464
+// skylight 2238771
 // lerpsubdiv 2
 // envmapradius 128
-// lightprecision 64
-// numplayers 10
+// lightprecision 74
+// numplayers 12
 // adaptivesample 1
 // maptitle [Vertigo by Quinton Reeves]
 // waterfallcolour 0
@@ -52,7 +52,7 @@
 // floatfric 5.0
 // shadowmapangle 0
 // cloudbox [<mad:0.05/0.05/0.05>skyboxes/gradient]
-// skybox [acord/overmars]
+// skybox [skyboxes/stars]
 // floorfric 15.0
 // fogcolour 0
 // mapmusic []
