added gridbindstyle 2 which cycles show*grid vars
Former-commit-id: 96b611c2261d42dbdc64c15e0e2e19819a0e29ee

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -168,16 +168,23 @@ editbind DELETE		[ getmap ]
 editbind LSHIFT		[ floatspeed 300; modscale = 10; onrelease [ floatspeed 75; modscale = 1; ] ]
 editbindmod LCTRL	passthrough
 editbind LALT		[ hmapedit; blendpaintmode 0 ]
-gridbindstyle = 1
+gridbindstyle = 2
 gridbindswitch = 0
-editbind TAB		[
+editbind TAB [
+	if (= $gridbindstyle 2) [
+		if (= $gridbindswitch 3) [ showpastegrid 0; showcursorgrid 0; showselgrid 0; gridbindswitch = 0 ]
+		if (= $gridbindswitch 2) [ showpastegrid 0; showcursorgrid 0; showselgrid 1; gridbindswitch = 3 ]
+		if (= $gridbindswitch 1) [ showpastegrid 0; showcursorgrid 1; showselgrid 0; gridbindswitch = 2 ]
+		if (= $gridbindswitch 0) [ showpastegrid 1; showcursorgrid 0; showselgrid 0; gridbindswitch = 1 ]
+	]
 	if (= $gridbindstyle 1) [
 		if (= $gridbindswitch 1) [
 			showpastegrid 0; showcursorgrid 0; showselgrid 0; gridbindswitch = 0
 		] [
 			showpastegrid 1; showcursorgrid 1; showselgrid 1; gridbindswitch = 1
 		]
-	] [
+	]
+	if (= $gridbindstyle 0) [
 		showpastegrid 1; showcursorgrid 1; showselgrid 1; onrelease [ showpastegrid 0; showcursorgrid 0; showselgrid 0 ]
 	]
 ]
