reduced the default gravity/time modifier between impulses
Former-commit-id: d8ccacbc5600d538a8e603c241cd7865cf5a6d72

--- a/data/maps/citadel.cfg
+++ b/data/maps/citadel.cfg
@@ -28,7 +28,7 @@ numteamplayers 8
 // lavafog 50
 // lmshadows 1
 // bumperror 3
-// impulsegravity 100.0
+impulsegravity 62.5
 // yawcloudlayer 0
 // cloudscrolly -0.001
 // cloudscrollx 0.01
