--- a/data/maps/overseer.cfg
+++ b/data/maps/overseer.cfg
@@ -28,7 +28,7 @@ numteamplayers 4
 // lavafog 50
 // lmshadows 1
 // bumperror 3
-// impulsegravity 100.0
+impulsegravity 62.5
 // yawcloudlayer 0
 // cloudscrolly 0.0
 // cloudscrollx 0.0
