--- a/data/maps/warground.cfg
+++ b/data/maps/warground.cfg
@@ -28,7 +28,7 @@ numteamplayers 10
 // lavafog 50
 // lmshadows 1
 // bumperror 3
-// impulsegravity 100.0
+impulsegravity 62.5
 // yawcloudlayer 0
 // cloudscrolly 0.005
 // cloudscrollx 0.01
